Update StringFuncUtil.java